--- a/OpenCVTools/OpenCVTools.vcxproj.filters
+++ b/OpenCVTools/OpenCVTools.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClInclude Include="FFmpegDecoder.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="mdevice.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FFmpegEncoder.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -66,6 +72,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="FFmpegDecoder.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="FFmpegEncoder.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
