--- a/OpenCVTools/OpenCVTools.vcxproj.filters
+++ b/OpenCVTools/OpenCVTools.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="FFmpegEncoder.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="videoTrans.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -75,6 +78,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="FFmpegEncoder.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="videoTrans.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
