准备对视频特效的测试22

--- a/OpenCVTools/OpenCVTools.vcxproj
+++ b/OpenCVTools/OpenCVTools.vcxproj
@@ -166,6 +166,7 @@
       <EnableUAC>false</EnableUAC>
       <AdditionalLibraryDirectories>$(SolutionDir)OpenCVTools\3rd\ffmpeg\lib;$(SolutionDir)OpenCVTools\3rd\opencv\x64\vc15\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opencv_world345.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;avutil.lib;swresample.lib;swscale.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <CLRThreadAttribute>MTAThreadingAttribute</CLRThreadAttribute>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
