--- a/formatChange/formatChange.vcxproj.filters
+++ b/formatChange/formatChange.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="pch.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="AVProcessor.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="formatChange.cpp">
@@ -36,6 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="AVProcessor.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
