添加了python打包为dll并且导出c接口的功能

--- a/MultiMediatoolTest/MultiMediatoolTest.vcxproj
+++ b/MultiMediatoolTest/MultiMediatoolTest.vcxproj
@@ -92,7 +92,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <AdditionalLibraryDirectories>$(SolutionDir)bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>OPENCVTOOLS.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>OPENCVTOOLS.lib;FORMATCHANGE.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
