--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ mplayer/3rd
 OpenCVTools/3rd
 build-MultiMediaTool-Desktop_Qt_5_12_11_MSVC2017_64bit-Debug
 build-myPlayer-Desktop_Qt_5_12_11_MSVC2017_64bit-Debug
+formatChange/3rd
 OpenCVTools/3rd/ffmpeg/bin/
 OpenCVTools/3rd/ffmpeg/lib/
 OpenCVTools/3rd/opencv/bin/
