--- a/WordToPdf/requirements.txt
+++ b/WordToPdf/requirements.txt
@@ -1,31 +1,52 @@
-# 通用基础库
-pandas>=1.3.0
-openpyxl>=3.0.0
-python-docx>=0.8.11
-pillow>=8.0.0
-
-# PDF相关
-PyPDF2>=2.0.0
-pdf2docx>=0.5.0
-pdfplumber>=0.6.0
-reportlab>=3.6.0
-fpdf2>=2.5.0
-
-# PPT相关
-python-pptx>=0.6.0
-
-# HTML相关
-beautifulsoup4>=4.9.0
-html5lib>=1.1
-
-# 图片处理
-img2pdf>=0.4.0
-pdf2image>=1.16.0
-
-# 构建相关
-Cython>=0.29.0
-numpy>=1.20.0
-setuptools>=50.0.0
-
-# 可选依赖
-# docx2pdf>=0.1.8  # 需要系统安装Word
+altgraph==0.17.5
+beautifulsoup4==4.14.3
+cffi==2.0.0
+charset-normalizer==3.4.4
+colorama==0.4.6
+cryptography==46.0.4
+Cython==3.2.4
+defusedxml==0.7.1
+Deprecated==1.3.1
+docx2pdf==0.1.8
+et_xmlfile==2.0.0
+fire==0.7.1
+fonttools==4.61.1
+fpdf2==2.8.5
+html5lib==1.1
+img2pdf==0.6.3
+lxml==6.0.2
+numpy==2.4.1
+opencv-python-headless==4.13.0.90
+openpyxl==3.1.5
+packaging==25.0
+pandas==3.0.0
+pdf2docx==0.5.8
+pdf2image==1.17.0
+pdfminer.six==20251230
+pdfplumber==0.11.9
+pefile==2024.8.26
+pikepdf==10.3.0
+pillow==12.1.0
+pip==25.3
+pycparser==3.0
+pyinstaller==6.18.0
+pyinstaller-hooks-contrib==2026.0
+PyMuPDF==1.26.7
+PyPDF2==3.0.1
+pypdfium2==5.3.0
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+python-pptx==1.0.2
+pywin32==311
+pywin32-ctypes==0.2.3
+reportlab==4.4.9
+setuptools==80.9.0
+six==1.17.0
+soupsieve==2.8.3
+termcolor==3.3.0
+tqdm==4.67.1
+typing_extensions==4.15.0
+tzdata==2025.3
+webencodings==0.5.1
+wrapt==2.1.1
+xlsxwriter==3.2.9
